--- a/output/es/index.html
+++ b/output/es/index.html
@@ -97,7 +97,7 @@
 </ol><ul><li><code>git checkout master</code></li>
 <li><code>git push origin `git subtree split --prefix output gh-pages`:gh-pages --force</code></li>
 </ul><p>An this last <strong>sweet</strong> line is the <strong>only one</strong> you will need to use to run every time you want to update your site/blog!</p>
-<p>In you are using <strong>Nikola</strong>, you can add this line to the <code>DEPLOY_COMMANDS</code> in your conf.py file and just run <code>nikola deploy</code> after building your site/blog.</p>
+<p>If you are using <strong>Nikola</strong>, you can add this line to the <code>DEPLOY_COMMANDS</code> in your conf.py file and just run <code>nikola deploy</code> after building your site/blog.</p>
 <p>More easier... impossible... ;-)</p>
 <p>Damián.</p>
 </div>
