--- a/output/es/index-1.html
+++ b/output/es/index-1.html
@@ -335,7 +335,7 @@ podrán leer algunas "cosas" interesantes (al menos interesantes para mi).</p>
 <ul class="pager">
   
     <li class="previous">
-        <a href="index.html">← Posts posteriores</a>
+        <a href="index-2.html">← Posts posteriores</a>
   
   
 </li></ul>
