--- a/output/index-1.html
+++ b/output/index-1.html
@@ -330,7 +330,7 @@ you will read a lot of interesting things (at least interesting for me).</p>
 <ul class="pager">
   
     <li class="previous">
-        <a href="index.html">← Newer posts</a>
+        <a href="index-2.html">← Newer posts</a>
   
   
 </li></ul>
