--- a/output/index-2.html
+++ b/output/index-2.html
@@ -170,8 +170,8 @@ MathJax.Hub.Config({
 </ul>
 <p><strong>NOTE: The theme was tested with Nikola version <a href="https://github.com/ralsina/nikola/tags">5.1</a></strong></p>
 <ul>
-<li>
-</li><li><a href="https://github.com/damianavila/site-ipython-theme-for-Nikola.git">site-ipython</a> theme for Nikola</li>
+<li><a href="https://github.com/ipython/ipython">IPython</a></li>
+<li><a href="https://github.com/damianavila/site-ipython-theme-for-Nikola.git">site-ipython</a> theme for Nikola</li>
 <li><a href="https://github.com/damianavila/compile_ipynb-for-Nikola.git">compile_ipynb</a> for Nikola</li>
 </ul>
 </div>
