--- a/output/es/index.html
+++ b/output/es/index.html
@@ -163,8 +163,8 @@ MathJax.Hub.Config({
             </div>
             <div class="body">
                 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Some people are asking me how to change the <code>IPython slides's</code> defaults. You can see the description of the request <a href="http://stackoverflow.com/questions/18820253/modifying-reveal-js-defaults-in-ipython-notebook-slide-generation">here</a>. Essentially, he wants to change the default transition between the slides.</p>
-<p>To solve this question, we introduce the notion of IPython config files, which let us easily change <em>things</em> inside <code>Ipython.nbconvert</code> (the library where the <code>IPython slides</code> lives) to achieve our desires, at least in the slideshow generation issue ;-)</p>
+<p>Some people are asking me how to change the IPython slides's defaults. You can see the description of the request <a href="http://stackoverflow.com/questions/18820253/modifying-reveal-js-defaults-in-ipython-notebook-slide-generation">here</a>. Essentially, he wants to change the default transition between the slides.</p>
+<p>To solve this question, we introduce the notion of IPython config files, which let us easily change <em>things</em> inside <code>IPython.nbconvert</code> (the library where the IPython slides lives) to achieve our desires, at least in the slideshow generation issue ;-)</p>
 <p>First of all, you need to know some details: </p><p class="more"><a href="posts/change-the-ipython-slides-defaults-with-an-ipython-config-file.html">Leer más…</a></p></div>
             </div>
         </div>
