--- a/output/galleries/index.html
+++ b/output/galleries/index.html
@@ -55,6 +55,7 @@ MathJax.Hub.Config({
         <li><a href="Facu_RN/"><i class="icon-folder-open"></i> Facu_RN</a></li>
         <li><a href="Inundacion/"><i class="icon-folder-open"></i> Inundacion</a></li>
         <li><a href="loadwrite/"><i class="icon-folder-open"></i> loadwrite</a></li>
+        <li><a href="rise/"><i class="icon-folder-open"></i> rise</a></li>
         <li><a href="spellchecker/"><i class="icon-folder-open"></i> spellchecker</a></li>
         <li><a href="trades/"><i class="icon-folder-open"></i> trades</a></li>
         <li><a href="twitter/"><i class="icon-folder-open"></i> twitter</a></li>
