--- a/output/index.html
+++ b/output/index.html
@@ -70,9 +70,9 @@ MathJax.Hub.Config({
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Github has a way to measure projects "popularity" through stars.</p>
+<p><strong>Github</strong> has a way to measure projects <code>popularity</code> through stars.</p>
 <p>And those stars are given by the users themselves.</p>
-<p>And we are just above a remarkable line...</p>
+<p>And we are just above a <strong>remarkable</strong> line...</p>
 <p class="more"><a href="posts/we-are-above-1000-stars.html">Read more…</a></p>
 </div>
 </div>
