--- a/es/galleries/Facu_RN/index.html
+++ b/es/galleries/Facu_RN/index.html
@@ -55,24 +55,36 @@ MathJax.Hub.Config({
 <noscript>
 <ul class="thumbnails">
 <li>
-<a href="../../../galleries/Facu_RN/DSC05928.JPG" class="thumbnail image-reference" title="Dsc05928">
-            <img src="../../../galleries/Facu_RN/DSC05928.thumbnail.JPG" alt="Dsc05928"></a>
-        </li>
-<li>
 <a href="../../../galleries/Facu_RN/DSC05901.JPG" class="thumbnail image-reference" title="Dsc05901">
             <img src="../../../galleries/Facu_RN/DSC05901.thumbnail.JPG" alt="Dsc05901"></a>
         </li>
 <li>
-<a href="../../../galleries/Facu_RN/DSC05918.JPG" class="thumbnail image-reference" title="Dsc05918">
-            <img src="../../../galleries/Facu_RN/DSC05918.thumbnail.JPG" alt="Dsc05918"></a>
+<a href="../../../galleries/Facu_RN/DSC05903.JPG" class="thumbnail image-reference" title="Dsc05903">
+            <img src="../../../galleries/Facu_RN/DSC05903.thumbnail.JPG" alt="Dsc05903"></a>
         </li>
 <li>
 <a href="../../../galleries/Facu_RN/DSC05917.JPG" class="thumbnail image-reference" title="Dsc05917">
             <img src="../../../galleries/Facu_RN/DSC05917.thumbnail.JPG" alt="Dsc05917"></a>
         </li>
 <li>
-<a href="../../../galleries/Facu_RN/DSC05903.JPG" class="thumbnail image-reference" title="Dsc05903">
-            <img src="../../../galleries/Facu_RN/DSC05903.thumbnail.JPG" alt="Dsc05903"></a>
+<a href="../../../galleries/Facu_RN/DSC05918.JPG" class="thumbnail image-reference" title="Dsc05918">
+            <img src="../../../galleries/Facu_RN/DSC05918.thumbnail.JPG" alt="Dsc05918"></a>
+        </li>
+<li>
+<a href="../../../galleries/Facu_RN/DSC05925.JPG" class="thumbnail image-reference" title="Dsc05925">
+            <img src="../../../galleries/Facu_RN/DSC05925.thumbnail.JPG" alt="Dsc05925"></a>
+        </li>
+<li>
+<a href="../../../galleries/Facu_RN/DSC05928.JPG" class="thumbnail image-reference" title="Dsc05928">
+            <img src="../../../galleries/Facu_RN/DSC05928.thumbnail.JPG" alt="Dsc05928"></a>
+        </li>
+<li>
+<a href="../../../galleries/Facu_RN/Facu1.png" class="thumbnail image-reference" title="Facu1">
+            <img src="../../../galleries/Facu_RN/Facu1.thumbnail.png" alt="Facu1"></a>
+        </li>
+<li>
+<a href="../../../galleries/Facu_RN/Facu2.png" class="thumbnail image-reference" title="Facu2">
+            <img src="../../../galleries/Facu_RN/Facu2.thumbnail.png" alt="Facu2"></a>
         </li>
 <li>
 <a href="../../../galleries/Facu_RN/Facu3.png" class="thumbnail image-reference" title="Facu3">
@@ -83,20 +95,8 @@ MathJax.Hub.Config({
             <img src="../../../galleries/Facu_RN/Facu4.thumbnail.png" alt="Facu4"></a>
         </li>
 <li>
-<a href="../../../galleries/Facu_RN/DSC05925.JPG" class="thumbnail image-reference" title="Dsc05925">
-            <img src="../../../galleries/Facu_RN/DSC05925.thumbnail.JPG" alt="Dsc05925"></a>
-        </li>
-<li>
 <a href="../../../galleries/Facu_RN/Facu5.png" class="thumbnail image-reference" title="Facu5">
             <img src="../../../galleries/Facu_RN/Facu5.thumbnail.png" alt="Facu5"></a>
-        </li>
-<li>
-<a href="../../../galleries/Facu_RN/Facu2.png" class="thumbnail image-reference" title="Facu2">
-            <img src="../../../galleries/Facu_RN/Facu2.thumbnail.png" alt="Facu2"></a>
-        </li>
-<li>
-<a href="../../../galleries/Facu_RN/Facu1.png" class="thumbnail image-reference" title="Facu1">
-            <img src="../../../galleries/Facu_RN/Facu1.thumbnail.png" alt="Facu1"></a>
 </li>
 </ul>
 </noscript>
@@ -121,7 +121,7 @@ Zen theme based in <a href="https://github.com/arusahni/website-template">Arusah
   })();
 
 </script><script src="../../../assets/js/all-nocdn.js" type="text/javascript"></script><script src="../../../assets/js/flowr.js"></script><script>
-jsonContent = [{"size": {"h": 101, "w": 180}, "title": "Dsc05928", "url": "../../../galleries/Facu_RN/DSC05928.JPG", "url_thumb": "../../../galleries/Facu_RN/DSC05928.thumbnail.JPG"}, {"size": {"h": 180, "w": 101}, "title": "Dsc05901", "url": "../../../galleries/Facu_RN/DSC05901.JPG", "url_thumb": "../../../galleries/Facu_RN/DSC05901.thumbnail.JPG"}, {"size": {"h": 101, "w": 180}, "title": "Dsc05918", "url": "../../../galleries/Facu_RN/DSC05918.JPG", "url_thumb": "../../../galleries/Facu_RN/DSC05918.thumbnail.JPG"}, {"size": {"h": 101, "w": 180}, "title": "Dsc05917", "url": "../../../galleries/Facu_RN/DSC05917.JPG", "url_thumb": "../../../galleries/Facu_RN/DSC05917.thumbnail.JPG"}, {"size": {"h": 101, "w": 180}, "title": "Dsc05903", "url": "../../../galleries/Facu_RN/DSC05903.JPG", "url_thumb": "../../../galleries/Facu_RN/DSC05903.thumbnail.JPG"}, {"size": {"h": 180, "w": 135}, "title": "Facu3", "url": "../../../galleries/Facu_RN/Facu3.png", "url_thumb": "../../../galleries/Facu_RN/Facu3.thumbnail.png"}, {"size": {"h": 180, "w": 135}, "title": "Facu4", "url": "../../../galleries/Facu_RN/Facu4.png", "url_thumb": "../../../galleries/Facu_RN/Facu4.thumbnail.png"}, {"size": {"h": 101, "w": 180}, "title": "Dsc05925", "url": "../../../galleries/Facu_RN/DSC05925.JPG", "url_thumb": "../../../galleries/Facu_RN/DSC05925.thumbnail.JPG"}, {"size": {"h": 180, "w": 135}, "title": "Facu5", "url": "../../../galleries/Facu_RN/Facu5.png", "url_thumb": "../../../galleries/Facu_RN/Facu5.thumbnail.png"}, {"size": {"h": 135, "w": 180}, "title": "Facu2", "url": "../../../galleries/Facu_RN/Facu2.png", "url_thumb": "../../../galleries/Facu_RN/Facu2.thumbnail.png"}, {"size": {"h": 135, "w": 180}, "title": "Facu1", "url": "../../../galleries/Facu_RN/Facu1.png", "url_thumb": "../../../galleries/Facu_RN/Facu1.thumbnail.png"}];
+jsonContent = [{"size": {"h": 180, "w": 101}, "title": "Dsc05901", "url": "../../../galleries/Facu_RN/DSC05901.JPG", "url_thumb": "../../../galleries/Facu_RN/DSC05901.thumbnail.JPG"}, {"size": {"h": 101, "w": 180}, "title": "Dsc05903", "url": "../../../galleries/Facu_RN/DSC05903.JPG", "url_thumb": "../../../galleries/Facu_RN/DSC05903.thumbnail.JPG"}, {"size": {"h": 101, "w": 180}, "title": "Dsc05917", "url": "../../../galleries/Facu_RN/DSC05917.JPG", "url_thumb": "../../../galleries/Facu_RN/DSC05917.thumbnail.JPG"}, {"size": {"h": 101, "w": 180}, "title": "Dsc05918", "url": "../../../galleries/Facu_RN/DSC05918.JPG", "url_thumb": "../../../galleries/Facu_RN/DSC05918.thumbnail.JPG"}, {"size": {"h": 101, "w": 180}, "title": "Dsc05925", "url": "../../../galleries/Facu_RN/DSC05925.JPG", "url_thumb": "../../../galleries/Facu_RN/DSC05925.thumbnail.JPG"}, {"size": {"h": 101, "w": 180}, "title": "Dsc05928", "url": "../../../galleries/Facu_RN/DSC05928.JPG", "url_thumb": "../../../galleries/Facu_RN/DSC05928.thumbnail.JPG"}, {"size": {"h": 135, "w": 180}, "title": "Facu1", "url": "../../../galleries/Facu_RN/Facu1.png", "url_thumb": "../../../galleries/Facu_RN/Facu1.thumbnail.png"}, {"size": {"h": 135, "w": 180}, "title": "Facu2", "url": "../../../galleries/Facu_RN/Facu2.png", "url_thumb": "../../../galleries/Facu_RN/Facu2.thumbnail.png"}, {"size": {"h": 180, "w": 135}, "title": "Facu3", "url": "../../../galleries/Facu_RN/Facu3.png", "url_thumb": "../../../galleries/Facu_RN/Facu3.thumbnail.png"}, {"size": {"h": 180, "w": 135}, "title": "Facu4", "url": "../../../galleries/Facu_RN/Facu4.png", "url_thumb": "../../../galleries/Facu_RN/Facu4.thumbnail.png"}, {"size": {"h": 180, "w": 135}, "title": "Facu5", "url": "../../../galleries/Facu_RN/Facu5.png", "url_thumb": "../../../galleries/Facu_RN/Facu5.thumbnail.png"}];
 flowr(document.querySelectorAll("#gallery_container")[0], {
         data : jsonContent,
         height : 180*.6,
