--- a/es/galleries/loadwrite/index.html
+++ b/es/galleries/loadwrite/index.html
@@ -59,12 +59,12 @@ MathJax.Hub.Config({
             <img src="../../../galleries/loadwrite/loader1.thumbnail.png" alt="Loader1"></a>
         </li>
 <li>
-<a href="../../../galleries/loadwrite/writer1.png" class="thumbnail image-reference" title="Writer1">
-            <img src="../../../galleries/loadwrite/writer1.thumbnail.png" alt="Writer1"></a>
-        </li>
-<li>
 <a href="../../../galleries/loadwrite/themes1.png" class="thumbnail image-reference" title="Themes1">
             <img src="../../../galleries/loadwrite/themes1.thumbnail.png" alt="Themes1"></a>
+        </li>
+<li>
+<a href="../../../galleries/loadwrite/writer1.png" class="thumbnail image-reference" title="Writer1">
+            <img src="../../../galleries/loadwrite/writer1.thumbnail.png" alt="Writer1"></a>
 </li>
 </ul>
 </noscript>
@@ -89,7 +89,7 @@ Zen theme based in <a href="https://github.com/arusahni/website-template">Arusah
   })();
 
 </script><script src="../../../assets/js/all-nocdn.js" type="text/javascript"></script><script src="../../../assets/js/flowr.js"></script><script>
-jsonContent = [{"size": {"h": 101, "w": 180}, "title": "Loader1", "url": "../../../galleries/loadwrite/loader1.png", "url_thumb": "../../../galleries/loadwrite/loader1.thumbnail.png"}, {"size": {"h": 101, "w": 180}, "title": "Writer1", "url": "../../../galleries/loadwrite/writer1.png", "url_thumb": "../../../galleries/loadwrite/writer1.thumbnail.png"}, {"size": {"h": 180, "w": 167}, "title": "Themes1", "url": "../../../galleries/loadwrite/themes1.png", "url_thumb": "../../../galleries/loadwrite/themes1.thumbnail.png"}];
+jsonContent = [{"size": {"h": 101, "w": 180}, "title": "Loader1", "url": "../../../galleries/loadwrite/loader1.png", "url_thumb": "../../../galleries/loadwrite/loader1.thumbnail.png"}, {"size": {"h": 180, "w": 167}, "title": "Themes1", "url": "../../../galleries/loadwrite/themes1.png", "url_thumb": "../../../galleries/loadwrite/themes1.thumbnail.png"}, {"size": {"h": 101, "w": 180}, "title": "Writer1", "url": "../../../galleries/loadwrite/writer1.png", "url_thumb": "../../../galleries/loadwrite/writer1.thumbnail.png"}];
 flowr(document.querySelectorAll("#gallery_container")[0], {
         data : jsonContent,
         height : 180*.6,
