--- a/es/index-4.html
+++ b/es/index-4.html
@@ -441,7 +441,7 @@ And now, I pretend to <em>log</em> the trades from this little account in a subs
         </div>
             <nav class="postindexpager"><ul class="pager">
 <li class="previous">
-                <a href="index.html" rel="prev">Publicaciones posteriores</a>
+                <a href="index-5.html" rel="prev">Publicaciones posteriores</a>
             </li>
             <li class="next">
                 <a href="index-3.html" rel="next">Publicaciones anteriores</a>
