--- a/output/index.html
+++ b/output/index.html
@@ -72,13 +72,13 @@ MathJax.Hub.Config({
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>You are in vacation time but you want to blog something nice to share with your friends.
-And your blog is powered by <strong>Nikola</strong>.
-And you are a <strong>Jupyter Notebook</strong> user.
-But you don't have your laptop with you, because you are on vacation time, remember? ;-)
-But you still have your phone and some connectivity.
-What do you think if I tell you you have a complete workflow to write your blogpost, build the site and deploy it just using your phone? But without using computational resources from your phone.</p>
-<p>Don't you believe me? Just read below and I will show you how this is possible... and fun!
+<p>You are in vacation time but you want to blog something nice to share with your friends.</p>
+<p>And your blog is powered by <strong>Nikola</strong>.</p>
+<p>And you are a <strong>Jupyter Notebook</strong> user.</p>
+<p>But you don't have your laptop with you, because you are on <em>vacation</em> time, remember? ;-)</p>
+<p>But you still have your phone and some connectivity.</p>
+<p>What do you think if I say that you have a complete workflow to write your blogpost, build the site and deploy it just using your phone? But without using computational resources from it (that would be also interesting, btw).</p>
+<p>Don't you believe me? Just read this post and I will show you how you can make this possible... and fun!
 </p>
 <p class="more"><a href="posts/binder-%2B-nikola-%2B-jupyter-%2B-github-blogging-resourceless.html">Read more…</a></p>
 </div>
