--- a/output/es/galleries/index.html
+++ b/output/es/galleries/index.html
@@ -8,8 +8,8 @@ article: http://ogp.me/ns/article#
 <meta name="viewport" content="width=device-width">
 <title>galleries | El blog de Damian</title>
 <link href="../../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
-<link rel="alternate" type="application/rss+xml" title="RSS (en)" href="../../rss.xml">
 <link rel="alternate" type="application/rss+xml" title="RSS (es)" href="../rss.xml">
+<link rel="alternate" type="application/rss+xml" title="RSS (en)" href="../../rss.xml">
 <link rel="canonical" href="http://www.damian.oquanta.info/es/galleries/index.html">
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
@@ -50,7 +50,8 @@ MathJax.Hub.Config({
 <li>galleries</li>
 </ul></nav><h1>galleries</h1>
     <ul>
-<li><a href="bokehmagic/"><i class="icon-folder-open"></i> bokehmagic</a></li>
+<li><a href="binder/"><i class="icon-folder-open"></i> binder</a></li>
+        <li><a href="bokehmagic/"><i class="icon-folder-open"></i> bokehmagic</a></li>
         <li><a href="deploy/"><i class="icon-folder-open"></i> deploy</a></li>
         <li><a href="Facu_RN/"><i class="icon-folder-open"></i> Facu_RN</a></li>
         <li><a href="Inundacion/"><i class="icon-folder-open"></i> Inundacion</a></li>
