--- a/es/galleries/binder/index.html
+++ b/es/galleries/binder/index.html
@@ -2,15 +2,15 @@
 <html prefix="
 og: http://ogp.me/ns#
 article: http://ogp.me/ns/article#
-" lang="en">
+" lang="es">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>galleries | Damian's blog</title>
-<link href="../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
-<link rel="alternate" type="application/rss+xml" title="RSS (es)" href="../es/rss.xml">
-<link rel="alternate" type="application/rss+xml" title="RSS (en)" href="../rss.xml">
-<link rel="canonical" href="http://www.damian.oquanta.info/galleries/index.html">
+<title>binder | El blog de Damian</title>
+<link href="../../../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
+<link rel="alternate" type="application/rss+xml" title="RSS (es)" href="../../rss.xml">
+<link rel="alternate" type="application/rss+xml" title="RSS (en)" href="../../../rss.xml">
+<link rel="canonical" href="http://www.damian.oquanta.info/es/galleries/binder/index.html">
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
     tex2jax: {
@@ -31,38 +31,33 @@ MathJax.Hub.Config({
         width: 100%;
     }
     </style>
-<link rel="alternate" hreflang="es" href="../es/galleries/index.html">
+<link rel="alternate" hreflang="en" href="../../../galleries/binder/index.html">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="rss.xml">
 </head>
 <body>
     <section class="social"><ul>
-<li><a href="../index.html" title="Home"><i class="icon-home"></i></a></li>
-            <li><a href="../archive.html" title="Archives"><i class="icon-folder-open-alt"></i></a></li>
-            <li><a href="../categories/index.html" title="Tags"><i class="icon-tags"></i></a></li>
-            <li><a href="../rss.xml" title="RSS"><i class="icon-rss"></i></a></li>
-            <li><a href="../stories/about-me.html" title="About me"><i class="icon-user"></i></a></li>
-            <li><a href="https://twitter.com/damian_avila" title="My Twitter"><i class="icon-twitter"></i></a></li>
-            <li><a href="https://github.com/damianavila" title="My Github"><i class="icon-github"></i></a></li>
-            <li><a href="https://plus.google.com/u/0/106896109587369688379/posts" title="My Google+"><i class="icon-google-plus"></i></a></li>
+<li><a href="../../index.html" title="Inicio"><i class="icon-home"></i></a></li>
+            <li><a href="../../archive.html" title="Archivos"><i class="icon-folder-open-alt"></i></a></li>
+            <li><a href="../../categories/index.html" title="Etiquetas"><i class="icon-tags"></i></a></li>
+            <li><a href="../../rss.xml" title="RSS"><i class="icon-rss"></i></a></li>
+            <li><a href="../../stories/about-me.html" title="Sobre mi..."><i class="icon-user"></i></a></li>
+            <li><a href="https://twitter.com/damian_avila" title="Mi Twitter"><i class="icon-twitter"></i></a></li>
+            <li><a href="https://github.com/damianavila" title="Mi Github"><i class="icon-github"></i></a></li>
+            <li><a href="https://plus.google.com/u/0/106896109587369688379/posts" title="Mi Google+"><i class="icon-google-plus"></i></a></li>
 
         </ul></section><section class="page-content"><div class="content" rel="main">
     <nav class="breadcrumbs"><ul class="breadcrumb">
-<li>galleries</li>
-</ul></nav><h1>galleries</h1>
-    <ul>
-<li><a href="binder/"><i class="icon-folder-open"></i> binder</a></li>
-        <li><a href="bokehmagic/"><i class="icon-folder-open"></i> bokehmagic</a></li>
-        <li><a href="deploy/"><i class="icon-folder-open"></i> deploy</a></li>
-        <li><a href="Facu_RN/"><i class="icon-folder-open"></i> Facu_RN</a></li>
-        <li><a href="Inundacion/"><i class="icon-folder-open"></i> Inundacion</a></li>
-        <li><a href="loadwrite/"><i class="icon-folder-open"></i> loadwrite</a></li>
-        <li><a href="rise/"><i class="icon-folder-open"></i> rise</a></li>
-        <li><a href="spellchecker/"><i class="icon-folder-open"></i> spellchecker</a></li>
-        <li><a href="trades/"><i class="icon-folder-open"></i> trades</a></li>
-        <li><a href="twitter/"><i class="icon-folder-open"></i> twitter</a></li>
-        <li><a href="zenmode/"><i class="icon-folder-open"></i> zenmode</a></li>
-    </ul>
+<li><a href="../">galleries</a></li>
+                <li>binder</li>
+</ul></nav><h1>binder</h1>
+
 <div id="gallery_container"></div>
+<noscript>
+<ul class="thumbnails"><li>
+<a href="../../../galleries/binder/terminal.png" class="thumbnail image-reference" title="Terminal">
+            <img src="../../../galleries/binder/terminal.thumbnail.png" alt="Terminal"></a>
+</li></ul>
+</noscript>
                     <footer id="footer"><p>Contents © 2017 <a href="mailto:info@oquanta.info">Damian Avila</a> - 
 Powered by <a href="http://getnikola.com">Nikola</a> - 
 Zen theme based in <a href="https://github.com/arusahni/website-template">Arusahni's website-template</a><br><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.5/ar/">
@@ -83,8 +78,8 @@ Zen theme based in <a href="https://github.com/arusahni/website-template">Arusah
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
-</script><script src="../assets/js/all-nocdn.js" type="text/javascript"></script><script src="../assets/js/flowr.js"></script><script>
-jsonContent = [];
+</script><script src="../../../assets/js/all-nocdn.js" type="text/javascript"></script><script src="../../../assets/js/flowr.js"></script><script>
+jsonContent = [{"size": {"h": 156, "w": 720}, "title": "Terminal", "url": "../../../galleries/binder/terminal.png", "url_thumb": "../../../galleries/binder/terminal.thumbnail.png"}];
 flowr(document.querySelectorAll("#gallery_container")[0], {
         data : jsonContent,
         height : 180*.6,
