--- a/output/galleries/index.html
+++ b/output/galleries/index.html
@@ -50,7 +50,8 @@ MathJax.Hub.Config({
 <li>galleries</li>
 </ul></nav><h1>galleries</h1>
     <ul>
-<li><a href="binder/"><i class="icon-folder-open"></i> binder</a></li>
+<li><a href="acm/"><i class="icon-folder-open"></i> acm</a></li>
+        <li><a href="binder/"><i class="icon-folder-open"></i> binder</a></li>
         <li><a href="bokehmagic/"><i class="icon-folder-open"></i> bokehmagic</a></li>
         <li><a href="deploy/"><i class="icon-folder-open"></i> deploy</a></li>
         <li><a href="Facu_RN/"><i class="icon-folder-open"></i> Facu_RN</a></li>
