--- a/es/galleries/rise/index.html
+++ b/es/galleries/rise/index.html
@@ -53,10 +53,16 @@ MathJax.Hub.Config({
 
 <div id="gallery_container"></div>
 <noscript>
-<ul class="thumbnails"><li>
+<ul class="thumbnails">
+<li>
 <a href="../../../galleries/rise/1004.png" class="thumbnail image-reference" title="">
             <img src="../../../galleries/rise/1004.thumbnail.png" alt=""></a>
-</li></ul>
+        </li>
+<li>
+<a href="../../../galleries/rise/dark_slides.png" class="thumbnail image-reference" title="Dark slides">
+            <img src="../../../galleries/rise/dark_slides.thumbnail.png" alt="Dark slides"></a>
+</li>
+</ul>
 </noscript>
                     <footer id="footer"><p>Contents © 2019 <a href="mailto:damianavila82@yahoo.com.ar">Damian Avila</a> - 
 Powered by <a href="http://getnikola.com">Nikola</a> - 
@@ -72,7 +78,7 @@ Zen theme based in <a href="https://github.com/arusahni/website-template">Arusah
 
   gtag('config', 'UA-139225553-1');
 </script><script src="../../../assets/js/all-nocdn.js" type="text/javascript"></script><script src="../../../assets/js/flowr.js"></script><script>
-jsonContent = [{"size": {"h": 91, "w": 1034}, "title": "", "url": "../../../galleries/rise/1004.png", "url_thumb": "../../../galleries/rise/1004.thumbnail.png"}];
+jsonContent = [{"size": {"h": 91, "w": 1034}, "title": "", "url": "../../../galleries/rise/1004.png", "url_thumb": "../../../galleries/rise/1004.thumbnail.png"}, {"size": {"h": 347, "w": 720}, "title": "Dark slides", "url": "../../../galleries/rise/dark_slides.png", "url_thumb": "../../../galleries/rise/dark_slides.thumbnail.png"}];
 flowr(document.querySelectorAll("#gallery_container")[0], {
         data : jsonContent,
         height : 180*.6,
