--- a/es/index.html
+++ b/es/index.html
@@ -211,7 +211,7 @@ MathJax.Hub.Config({
 <p>This is a very short but important post!</p>
 <p>As you probably know, this blog can be found as a subdomain of <code>oquanta.info</code>.</p>
 <p>Starting <strong>Jan 23rd, 2019</strong>, I will be abandoning that domain name because <em>GoDaddy</em> is asking me <strong>unreasonable</strong> prices for renewal... and, actually, I am not using that domain except for the blog itself.</p>
-<p>As you probably know as well, for several years, this blog has been hosted in <code>gh-pages</code>, so I will just use the default and expected URL provided by <em>Github</em>: <a href="http://damianavila.github.io/blog">http://damianavila.github.io/blog</a></p>
+<p>As you probably know as well, for several years, this blog has been hosted in <code>gh-pages</code>, so I will just use the default and expected URL provided by <em>Github</em>: <a href="https://damianavila.github.io/blog">https://damianavila.github.io/blog</a></p>
 <p>Please, make sure to <strong>bookmark/save/link</strong> the correct URL if you want to keep reading about some of my stuff ;-)</p>
 <p>Have a great start of the week!</p>
 
