--- a/output/es/stories/about-me.html
+++ b/output/es/stories/about-me.html
@@ -190,7 +190,7 @@ My main focus of interests is Data Science, Finance, Education, Data Visualizati
 <li>
 <a href="https://damianavila.github.io/blog/stories/support-me.html">https://damianavila.github.io/blog/stories/support-me.html</a> (Damian-specific funding for exploring new ideas)</li>
 <li>
-<a href="https://rise.readthedocs.io/en/stable/support-us.html">https://rise.readthedocs.io/en/stable/support-us.html</a> (RISE-specific funding)</li>
+<a href="https://rise.readthedocs.io/en/stable/support.html">https://rise.readthedocs.io/en/stable/support.html</a> (RISE-specific funding)</li>
 </ul>
 <p>OK, I think this is all for now.</p>
 <p>I hope you enjoy my site!</p>
